# object-detect-cv25

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake
include/: dataloader.hpp  detection.hpp  object_localizer.hpp
src/: CMakeCache.txt  Makefile  cmake_install.cmake  dataloader.cpp  dataloader.hpp  detection.cpp  detection.hpp  main.cpp  matching.cpp  matching.hpp  object-detect  object_localizer.cpp  object_localizer.hpp  preprocessing.cpp  preprocessing.hpp  utils.cpp  utils.hpp
